--- a/views/view.ejs
+++ b/views/view.ejs
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                 <a href="/upload-page" class="btn btn-secondary">View Uploaded Images</a>
                 <a href="/aql-results" class="btn btn-secondary">AQL</a>
-                <a href="/generate-report" class="btn btn-secondary">AQL</a>
+                <a href="/generate-report" class="btn btn-secondary">Generate PDF</a>
             </div>
 
                 <form action="/view" method="get" class="row g-3">
